# app-nem

./: .git-blame-ignore-revs  .gitignore  .markdownlint.jsonc  .pre-commit-config.yaml  Makefile  README.md  ledger_app.toml  pytest.ini  ruff.toml  signCatapultTransaction.py  test_nem.py
.github/: PULL_REQUEST_TEMPLATE.md
doc/: nemapp.asc  transactions_schema.md
examples/: base.py  getPublicKeyForMainnet.py  getPublicKeyForTestnet.py  getVersion.py  signCatapultGetPublickey.py  signCatapultMosaicCreation.py  signCatapultNamespaceCreation.py  signCatapultSubNamespaceCreation.py  signCatapultTransfer.py  (+18 more)
specs/: README.md
tests/: CMakeLists.txt  bolos_target.h
tests/corpus/: create_mosaic_2_tx.json  create_mosaic_levy_tx.json  create_mosaic_tx.json  create_namespace_tx.json  create_subnamespace_tx.json  importance_transfer_tx.json  multiple_mosaic_2_tx.json  multiple_mosaic_tx.json  multisig_aggregate_modification_2_tx.json  multisig_aggregate_modification_3_tx.json  multisig_aggregate_modification_tx.json  multisig_create_mosaic_levy_tx.json  multisig_create_mosaic_tx.json  multisig_create_namespace_tx.json  multisig_signature_provision_namespace_transaction.json  multisig_signature_transaction.json  multisig_signature_transfer_transaction.json  multisig_transfer_transaction_tx.json  transfer_encrypted_message_tx.json  transfer_hex_message_tx.json  transfer_tx.json
tests/functional/: conftest.py  requirements.txt  test_app_mainmenu.py  test_nem_transaction_builder_parser.py  test_pubkey_cmd.py  test_remote_account_cmd.py  test_sign_cmd.py  test_version_cmd.py  usage.md  utils.py
tests/functional/apps/: nem.py  nem_transaction_builder.py  nem_transaction_parser.py
tests/testcases/: create_mosaic.raw  multisig_cosignature_transfer_transaction.raw  multisig_mosaic_definition.raw  multisig_mosaic_definition_with_levy.raw  multisig_provision_namespace.raw  multisig_signature_transfer_transaction.raw  multisig_transfer_transaction.raw  provision_subnamespace.raw  transfer_transaction.raw  transfer_transaction_hex_message.raw  transfer_transaction_multi_mosaics.raw
tests/tools/: getPublicKey.py  getRemoteAccount.py  getVersion.py  signTx.py
tests/unit/: CMakeLists.txt  README.md  test_transaction_parser.c  test_transaction_parser.py
tests/unit-tests/: CMakeLists.txt  README.md  test_transaction_parser.c  test_transaction_parser.py
tests/unit-tests/testcases/: mosaic_definition_with_levy.raw  multisig_cosignature_provision_namespace.raw  transfer_transaction_encrypted_message.raw  transfer_transaction_multi_mosaics_2.raw
(+61 files in other folders)
